# OpenETLAgent

./: .gitignore  LICENSE  README.MD  config.yaml  dev_init.sh  environment.yml  flake.nix  generated_operations.yaml  pipeline_definition.yaml  pyproject.toml  python-env.nix  target_template.yaml
app/: instruct_prompt.py  main.py  models.py
app/operations/: application.py  arithmetic.py  asignation.py  bind.py  casting.py  comparison.py  concatenation.py  equality.py  fold.py  switching.py  unfold.py
input_folder/: customers.csv  orders.csv  products.csv  sample_input.csv
output_folder/: enriched_orders.csv  enriched_orders_final.csv  llm_output.csv  profit_by_region_category.csv  sample_output.csv
pipelines/: enriched_output_def.yaml  summary_output_def.yaml
