# pyproject.toml
[tool.poetry]
name = "open-etl-agent"
version = "0.1.0" # Or your project's version
description = "Python environment for Open ETL Agent"
authors = ["Your Name <you@example.com>"]
readme = "README.md" # Optional

[tool.poetry.dependencies]
# Specify the Python version compatible with pkgs.python311
python = "~3.11"

# Your exact dependencies and versions:
tqdm = ">=4.0"
pydantic = ">=2.5,<3"
numpy = ">=1.26,<2"
pandas = ">=2.1,<3"
python-dotenv = ">=1,<2"
requests = ">=2.31,<3"
pytest = ">=8.3.4"
setuptools = "==75.8.0" # Pinning setuptools like this is uncommon but included as requested
pydantic-ai = ">=0.0.22"

[build-system]
# Standard boilerplate for Poetry projects
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"